# ocr-agent

./: .env.example  .gitignore  OCR_RESEARCH_REPORT.md  README.md  llm_audit.jsonl  pyproject.toml  pytest.ini
docs/: SETUP_QDRANT.md
server/: run_api.py  run_ocr.py
src/ocr_agent/: __init__.py  cli.py  config.py  models.py  pdf_processor.py  pipeline.py  table_parser.py
src/ocr_agent/api/: __init__.py  dependencies.py  document_registry.py  events.py  main.py  schemas.py  unified_logs.py
src/ocr_agent/api/routes/: documents.py  logs.py  search.py
src/ocr_agent/chunking/: __init__.py  base.py  recursive.py  section.py
src/ocr_agent/llm/: __init__.py  audit.py  client.py
src/ocr_agent/ocr/: __init__.py  base.py  ollama.py  router.py  tesseract.py
src/ocr_agent/storage/: __init__.py  base.py  json_file.py  logs.py  postgres.py  qdrant.py
tests/: __init__.py  test_pipeline.py
